# besserlesenschreiben/backend/openapi.json
@@ -729,10 +729,16 @@
                   "pin": {
                     "type": "string",
                     "pattern": "^\\d{4}$"
+                  },
+                  "profileId": {
+                    "type": "string",
+                    "format": "uuid",
+                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
                   }
                 },
                 "required": [
-                  "pin"
+                  "pin",
+                  "profileId"
                 ]
               }
             }
@@ -773,26 +779,6 @@
       "post": {
         "operationId": "ParentController_unlockNext",
         "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "profileId": {
-                    "type": "string",
-                    "format": "uuid",
-                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
-                  }
-                },
-                "required": [
-                  "profileId"
-                ]
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "",
@@ -837,26 +823,6 @@
       "post": {
         "operationId": "ParentController_reset",
         "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "profileId": {
-                    "type": "string",
-                    "format": "uuid",
-                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
-                  }
-                },
-                "required": [
-                  "profileId"
-                ]
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "",
@@ -2192,12 +2158,16 @@
                         "starsToNext"
                       ],
                       "additionalProperties": false
+                    },
+                    "allUnitsComplete": {
+                      "type": "boolean"
                     }
                   },
                   "required": [
                     "starsAwarded",
                     "streakDays",
-                    "league"
+                    "league",
+                    "allUnitsComplete"
                   ],
                   "additionalProperties": false
                 }
